# Estructura-de-Datos2

./: README.md
Examen1/: CMakeLists.txt  main.cpp  test.sh  zip.h
Examen1/files/: random_data.txt  thousand_numbers.txt
Examen2/Ejercicio1/: CMakeLists.txt  checksum.cpp  checksum.h  test_checksum.cpp
Examen2/Ejercicio2/: CMakeLists.txt  coso.txt  inv_index.cpp  inv_index.h  main.cpp  paises.txt  test.sh
Examen2/Ejercicio3/: CMakeLists.txt  avl.h  test_avl.cpp
Proyecto 1/: CMakeLists.txt  FiRe.cpp  FiRe.h  main.cpp
Proyecto2/: CMakeLists.txt  FIleM.h  FileM.cpp  MP.h  binario.h  main.cpp
Proyecto2/Archivo/: covid.csv
Prueba1/: main.cpp
Prueba1/tests/output/: Chevalier.txt  Marbles.txt  invalid.txt  panda.txt  penguins.txt
Prueba2/: CMakeLists.txt  main.cpp
Prueba3/: CMakeLists.txt  main.cpp  test.sh
Prueba3/jfiles/: ed2p42020.json  file1.json  numbers.json
Prueba3/yfiles/: ed2p42020.yml  file1.yml  menu.yml  numbers.yml
